# iadev

./: .gitignore  README.md  fibonacci.md  fibonacci2.md  pyproject.toml  requirements.txt
agents/: Amélioration de prompt.txt  README.md  supervisor.yaml
iadev/: __main__.py
iadev/LLM/: Agent.py  Model.py  Server.py
