[project]
name = "iadev"
version = "0.1.0"
description = "Test de l'utilisation de Ollama pour générer un système multiagent pour générer des projets"
authors = [
    {name = "Yoann Dufresne"}
]
license = {text = "AGPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iadev = "iadev.__main__:main"
